# map_solver

./: .syntastic_cpp_config  CMakeLists.txt  README.md
map_solver/: CMakeLists.txt
map_solver/include/map_solver/: island.hpp  land.hpp  map_solver.hpp
map_solver/src/: island.cpp  land.cpp  main.cpp  map_solver.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp
tests/var/: islands.txt
